Fixing style and adding collapse and un-collapse click

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -447,8 +447,8 @@
   width: 140px;
   padding-left: 10px;
   border: 1px solid rgba(170, 170, 170, 0.637);
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
 }
 
 .fxe-table-country {
